event dedik ama musicianprofile a sahip kullanicilar icin band sistemi yazdim :D o yuzden bu branchden devam edecegim. testler henuz yazilmadi eventi bitirdikten sonra ikisini bir yazicam