@@ -2,6 +2,8 @@ package com.berkayb.soundconnect.modules.profile.MusicianProfile.service;
 
 import com.berkayb.soundconnect.modules.instrument.entity.Instrument;
 import com.berkayb.soundconnect.modules.instrument.repository.InstrumentRepository;
+import com.berkayb.soundconnect.modules.profile.MusicianProfile.band.dto.response.BandResponseDto;
+import com.berkayb.soundconnect.modules.profile.MusicianProfile.band.service.BandService;
 import com.berkayb.soundconnect.modules.profile.MusicianProfile.dto.request.MusicianProfileSaveRequestDto;
 import com.berkayb.soundconnect.modules.profile.MusicianProfile.dto.response.MusicianProfileResponseDto;
 import com.berkayb.soundconnect.modules.profile.MusicianProfile.entity.MusicianProfile;
@@ -31,6 +33,7 @@ class MusicianProfileServiceImplTest {
 	@Mock UserEntityFinder userFinder;
 	@Mock InstrumentRepository instrumentRepo;
 	@Mock MusicianProfileMapper mapper;
+	@Mock BandService bandService;   // <-- EKLENDİ
 	
 	@InjectMocks
 	MusicianProfileServiceImpl service;
@@ -38,6 +41,7 @@ class MusicianProfileServiceImplTest {
 	@Test
 	void createProfile_shouldCreate_whenNotExists() {
 		UUID userId = UUID.randomUUID();
+		
 		var dto = new MusicianProfileSaveRequestDto(
 				"Stage", "Bio", "pic", "ig", "yt", "sc", "sp",
 				Set.of(UUID.randomUUID())
@@ -53,19 +57,26 @@ class MusicianProfileServiceImplTest {
 		var saved = MusicianProfile.builder().id(UUID.randomUUID()).user(user).build();
 		when(repo.save(any(MusicianProfile.class))).thenReturn(saved);
 		
-		var resp = new MusicianProfileResponseDto(saved.getId(), "Stage", "Bio", "pic","ig","yt","sc","sp",
-		                                          Set.of("Guitar"), Collections.emptySet());
-		when(mapper.toDto(saved)).thenReturn(resp);
+		var baseDto = new MusicianProfileResponseDto(
+				saved.getId(), "Stage", "Bio", "pic","ig","yt","sc","sp",
+				Set.of("Guitar"), Collections.emptySet(), Collections.emptySet()
+		);
+		
+		when(mapper.toDto(saved)).thenReturn(baseDto);
+		when(bandService.getBandsByUser(userId)).thenReturn(Collections.emptyList());
 		
 		var result = service.createProfile(userId, dto);
 		
 		assertThat(result.stageName()).isEqualTo("Stage");
+		assertThat(result.bands()).isEmpty(); // <-- EKLENDİ
+		
 		verify(repo).save(any(MusicianProfile.class));
 	}
 	
 	@Test
 	void createProfile_shouldThrow_whenAlreadyExists() {
 		UUID userId = UUID.randomUUID();
+		
 		when(userFinder.getUser(userId)).thenReturn(User.builder().id(userId).build());
 		when(repo.findByUserId(userId)).thenReturn(Optional.of(new MusicianProfile()));
 		
@@ -73,27 +84,36 @@ class MusicianProfileServiceImplTest {
 				.isInstanceOf(SoundConnectException.class)
 				.satisfies(ex -> assertThat(((SoundConnectException) ex).getErrorType())
 						.isEqualTo(ErrorType.PROFILE_ALREADY_EXISTS));
+		
 		verify(repo, never()).save(any());
 	}
 	
 	@Test
 	void getProfileByUserId_shouldReturn_whenExists() {
 		UUID userId = UUID.randomUUID();
+		
 		var profile = MusicianProfile.builder().id(UUID.randomUUID()).build();
+		
 		when(userFinder.getUser(userId)).thenReturn(User.builder().id(userId).build());
 		when(repo.findByUserId(userId)).thenReturn(Optional.of(profile));
 		
-		var resp = new MusicianProfileResponseDto(profile.getId(), "S", "B", null,null,null,null,null,
-		                                          Collections.emptySet(), Collections.emptySet());
-		when(mapper.toDto(profile)).thenReturn(resp);
+		var baseDto = new MusicianProfileResponseDto(
+				profile.getId(), "S", "B", null,null,null,null,null,
+				Collections.emptySet(), Collections.emptySet(), Set.of()
+		);
+		
+		when(mapper.toDto(profile)).thenReturn(baseDto);
+		when(bandService.getBandsByUser(userId)).thenReturn(Collections.emptyList());
 		
 		var result = service.getProfileByUserId(userId);
 		assertThat(result.id()).isEqualTo(profile.getId());
+		assertThat(result.bands()).isEmpty(); // <-- EKLENDİ
 	}
 	
 	@Test
 	void getProfileByUserId_shouldThrow_whenNotFound() {
 		UUID userId = UUID.randomUUID();
+		
 		when(userFinder.getUser(userId)).thenReturn(User.builder().id(userId).build());
 		when(repo.findByUserId(userId)).thenReturn(Optional.empty());
 		
@@ -106,21 +126,32 @@ class MusicianProfileServiceImplTest {
 	@Test
 	void updateProfile_shouldPatchAndReturn() {
 		UUID userId = UUID.randomUUID();
+		
 		var profile = MusicianProfile.builder().id(UUID.randomUUID()).build();
+		
 		when(userFinder.getUser(userId)).thenReturn(User.builder().id(userId).build());
 		when(repo.findByUserId(userId)).thenReturn(Optional.of(profile));
 		
-		var dto = new MusicianProfileSaveRequestDto("NewStage", "NewBio", "pp", "ig","yt","sc","sp", Set.of());
+		var dto = new MusicianProfileSaveRequestDto(
+				"NewStage", "NewBio", "pp", "ig","yt","sc","sp", Set.of()
+		);
+		
 		when(instrumentRepo.findAllById(any())).thenReturn(List.of());
 		when(repo.save(profile)).thenReturn(profile);
 		
-		var resp = new MusicianProfileResponseDto(profile.getId(), "NewStage", "NewBio", "pp","ig","yt","sc","sp",
-		                                          Collections.emptySet(), Collections.emptySet());
-		when(mapper.toDto(profile)).thenReturn(resp);
+		var baseDto = new MusicianProfileResponseDto(
+				profile.getId(), "NewStage", "NewBio", "pp","ig","yt","sc","sp",
+				Collections.emptySet(), Collections.emptySet(), Collections.emptySet()
+		);
+		
+		when(mapper.toDto(profile)).thenReturn(baseDto);
+		when(bandService.getBandsByUser(userId)).thenReturn(Collections.emptyList());
 		
 		var result = service.updateProfile(userId, dto);
+		
 		assertThat(result.stageName()).isEqualTo("NewStage");
-		assertThat(result.bio()).isEqualTo("NewBio");
+		assertThat(result.bands()).isEmpty();  // <-- EKLENDİ
+		
 		verify(repo).save(profile);
 	}
 }
